<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings related to all application -->
    <string name="app_name">Redh00d</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_register">Register</string>
    <string name="button_login">Sign in</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to subscribe -->

    <string name="title_activity_home">HomeActivity</string>

</resources>
